# buenpick-piki

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  GUIA_PENDIENTES_DUENO.md  PIKI_DECISIONS.md  PIKI_EVIDENCE.md  PIKI_STATUS.md  README.md  SECURITY.md  alembic.ini  compose.ai-local.yml  compose.meta-local.yml  compose.prod-local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
buenpickinternalapi/: INTERNAL_API.md
deploy/: stack.yml
docs/: ARCHITECTURE_DECISIONS.md  GOLDEN_BEHAVIORS.md  LEGACY_RECOVERY_MAP.md  OPERATOR_CONSOLE_ARCHITECTURE.md  PIKI_VOICE_AND_EVIDENCE.md
docs/operations/: DEPLOYMENT_BASELINE.md  LOCAL_CHAT_QUICKSTART.md  META_PRODUCTION_HANDOFF.md  N8N_OWNER_QUICKSTART.md  OWNER_META_N8N_GUIDE.md
migrations/: env.py
migrations/versions/: 0001_core_records.py  0002_delivery_status_events.py  0003_handoff_workflow.py  0004_message_processing_outbox.py
piki_codex_harness_simple/: 00_MASTER_PROMPT.md  01_INTRODUCCION_Y_PRINCIPIOS.md  02_ARQUITECTURA_TECNICA.md  03_MAPA_Y_PLAN_GENERAL.md  04_CONCILIACION_DELIBOT_BUENPICK.md  05_ETAPA_1_ARQUEOLOGIA_Y_RECOVERY_MAP.md  06_ETAPA_2_BOOTSTRAP_Y_CONTRATOS.md  07_ETAPA_3_CLIENTE_BUENPICK_Y_TOOLS.md  08_ETAPA_4_ESTADO_MEMORIA_Y_ACTIVE_PICK.md  09_ETAPA_5_JINJA_LLM_GROUNDING.md  10_ETAPA_6_META_WHATSAPP_OFICIAL.md  11_ETAPA_7_GOLDEN_TESTS_Y_OBSERVABILIDAD.md  12_ETAPA_8_PGVECTOR_Y_SINCRONIZACION.md  13_ETAPA_9_N8N_Y_PRODUCCION.md  README.md
scripts/: smoke-stage2.sh
src/piki/: __init__.py
tests/: __init__.py
tests/api/: test_chat.py  test_health.py
(+93 files in other folders)
