[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "buenpick-piki"
version = "0.1.0"
description = "Piki, BuenPick's evidence-first conversational assistant"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.4",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "psycopg[binary]==3.3.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "redis==7.2.1",
  "sqlalchemy==2.0.48",
  "structlog==25.5.0",
  "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.7.0",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.6",
]

[project.scripts]
piki-api = "piki.api.main:run"
piki-worker = "piki.worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/piki"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["piki"]

[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true
